# odd-mssql-adapter

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: .env  docker-compose.yml
odd_mssql_adapter/: adapter.py  config.py  controller.py  scheduler.py  wsgi.py
odd_mssql_adapter/mappers/: __init__.py  columns.py  tables.py
server/adapter/: __init__.py  adapter.py  column.py  table.py
