[tool.poetry]
name = "odd-mssql-adapter"
version = "0.1.2"
description = ""
authors = ["Ruslan Ibragimov <ribragimov@provectus.com>"]


[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
flask = "^2.0.1"
APScheduler = "^3.7.0"
pyodbc = "^4.0.32"
odd-models = "^1.0.9"
oddrn-generator = "^0.1.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
